Fixed Error with .toList()